# SwiftGUI-Encryption

./: .gitignore  README.md  pyproject.toml
docs/tutorial/: 01 Introduction to cryptography.md  02 Getting started.md
src/SwiftGUI_Encryption/: __init__.py  basics.py  key_files.py
src/SwiftGUI_Encryption/Advanced/: __init__.py  low_level.py
src/SwiftGUI_Encryption/sg/: __init__.py  dictFile.py  popup_create_password.py
tests/: test.py
tools/: PasswordSecurityEstimator.py
